# ASC_AGENT

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
repos/accl/asc-stl/: CMakeLists.txt  compile_commands.json  run_host_test.sh
repos/accl/asc-stl/include/asc/__driver/: .gitkeep
repos/accl/asc-stl/include/asc/std/: __config  algorithm  algorithm.all_of.h  algorithm.any_of.h  algorithm.copy_if.h  algorithm.find_if.h  algorithm.find_if_not.h  algorithm.for_each.h  algorithm.generate.h  algorithm.none_of.h  algorithm.remove_copy.h  algorithm.remove_copy_if.h  algorithm.replace.h  algorithm.replace_copy.h  algorithm.replace_copy_if.h  algorithm.replace_if.h  algorithm.reverse_copy.h  cassert  cfloat  functional  numeric  type_traits  utility
repos/accl/asc-stl/include/asc/std/__algorithm/: all_of.h  any_of.h  clamp.h  comp.h  copy_if.h  find_if.h  find_if_not.h  for_each.h  generate.h  max.h  median3.h  min.h  none_of.h  quad_fanout.h  remove_copy.h  remove_copy_if.h  replace.h  replace_copy.h  replace_copy_if.h  replace_if.h  reverse_copy.h  sort3.h
repos/accl/asc-stl/include/asc/std/__barrier/: empty_completion.h
repos/accl/asc-stl/include/asc/std/__expected/: unexpect.h
repos/accl/asc-stl/include/asc/std/__host_stdlib/: algorithm  istream  math.h  memory  new  numeric  ostream  sstream  stdexcept  time.h
repos/accl/asc-stl/include/asc/std/__iterator/: default_sentinel.h
repos/accl/asc-stl/include/asc/std/__numeric/: abs_diff.h  gcd.h  lcm.h  range_width.h  saturate_sub.h  spread3.h
repos/accl/asc-stl/include/asc/std/__ranges/: enable_borrowed_range.h  from_range.h  views.h
repos/accl/asc-stl/include/asc/std/__type_traits/: integral_constant.h  nat.h  void_t.h
repos/accl/asc-stl/include/asc/std/__utility/: ctad_support.h  undefined.h
repos/accl/asc-stl/test/asc-stl/: CMakeLists.txt
repos/accl/asc-stl/test/asc-stl/asc/device/: max_tests.cpp
repos/accl/asc-stl/test/asc-stl/asc/host/: CMakeLists.txt  abs_diff_tests.cpp  algorithm_all_of_tests.cpp  algorithm_any_of_tests.cpp  algorithm_copy_if_tests.cpp  algorithm_find_if_not_tests.cpp  algorithm_find_if_tests.cpp  algorithm_for_each_tests.cpp  algorithm_generate_tests.cpp  algorithm_none_of_tests.cpp  algorithm_remove_copy_if_tests.cpp  algorithm_remove_copy_tests.cpp  algorithm_replace_copy_if_tests.cpp  algorithm_replace_copy_tests.cpp  algorithm_replace_if_tests.cpp  algorithm_replace_tests.cpp  algorithm_reverse_copy_tests.cpp  algorithm_tests.cpp  all_of_tests.cpp  any_of_tests.cpp  cassert_tests.cpp  cfloat_tests.cpp  clamp_tests.cpp  comp_tests.cpp  copy_if_tests.cpp  ctad_support_tests.cpp  default_sentinel_tests.cpp  empty_completion_tests.cpp  enable_borrowed_range_tests.cpp  find_if_not_tests.cpp  find_if_tests.cpp  for_each_tests.cpp  from_range_tests.cpp  gcd_tests.cpp  generate_tests.cpp  integral_constant_tests.cpp  istream_tests.cpp  lcm_tests.cpp  math_tests.cpp  max_tests.cpp  (+33 more)
repos/accl/asc-stl/test/asc-stl/asc/kernel/abs_diff_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/all_of_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/any_of_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/clamp_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/comp_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/copy_if_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/ctad_support_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/default_sentinel_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/empty_completion_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/find_if_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/find_if_not_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/asc-stl/test/asc-stl/asc/kernel/for_each_example/: host.cpp  host.h  kernel.cpp  kernel_spec.json  main.cpp  run_test.sh
repos/accl/libascendcxx/: 000_set_env.sh  001_setup_build.sh  002_only_make_host.sh  003_set_cannsim_env.sh  004_build_cmake_test_host_cannsim.sh  CMakeLists.txt  compile_commands.json  run_host_test.sh
repos/accl/libascendcxx/include/ascend/std/: __config  algorithm  functional  numeric  type_traits  utility
repos/accl/libascendcxx/include/ascend/std/__algorithm/: all_of.h  any_of.h  clamp.h  comp.h  find_if.h  min.h  minmax.h  none_of.h  sort3.h  swap.h
repos/accl/libascendcxx/include/ascend/std/__functional/: identity.h  operations.h
repos/accl/libascendcxx/include/ascend/std/__numeric/: abs_diff.h  gcd.h  gcd_lcm.h  lcm.h  midpoint.h  range_width.h  spread3.h
repos/accl/libascendcxx/include/ascend/std/__type_traits/: conditional.h  integral_constant.h  is_reference.h  is_same.h  remove_reference.h
repos/accl/libascendcxx/include/ascend/std/__utility/: forward.h  move.h  pair.h  swap.h
repos/accl/libascendcxx/test/libascendcxx/: CMakeLists.txt
repos/accl/libascendcxx/test/libascendcxx/ascend/device/: max_tests.cpp
repos/accl/libascendcxx/test/libascendcxx/ascend/host/: all_of_tests.cpp  any_of_tests.cpp  clamp_tests.cpp  find_if_tests.cpp  gcd_tests.cpp  lcm_tests.cpp  max_tests.cpp  midpoint_tests.cpp  min_tests.cpp  minmax_tests.cpp  none_of_tests.cpp  public_algorithm_tests.cpp  public_functional_tests.cpp  public_numeric_tests.cpp  public_type_traits_tests.cpp  public_utility_tests.cpp  quad_fanout_tests.cpp  sort3_tests.cpp  spread3_tests.cpp  swap_tests.cpp
(+1205 files in other folders)
